# web-ui

./: .GEMINI.md  .aiexclude  .aiignore  .gitignore  AI_CONSTITUTION.md  AI_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  README_ANTI_PATTERN.md  auth.py  certificate_helper.py  client_secret2.json  commands.cmd  install.py  main.py  oauth_flow.py  outline.md  package-lock.json  package.json  problem.json  promptParser.js  prompts.md  pyproject.toml  requirements.txt  run.py  school_knowledge.db  server.py  src - Shortcut.lnk  webui.py
.gemini/commands/: feature.toml  refactor.toml  start_here.ps1  test.toml
.google/: config.yaml
app/: agent_router.py  auth.py  backend.py  base_router.py  browser.py  browser_use_agent.py  config.py  config_loader.py  environment_banner.py  factory.py  files.py  knowledge_base.py  lifespan.py  llm_manager.py  main.py  memory_utils.py  models.py  oauth_flow.py  server.py  settings.py  task_orchestrator.py  utils.py  websocket.py
app/core/: base.py  (+2 more)
browser_session/: Last Browser  Local State
config/: settings.py
installation/: files.py  installer.py
scripts/: seed_extraction_models.py
src/: config.py  core.py  error_handler.py  knowledge_base_api.py  server_setup.py
static/: animated_background.js  app.js  config.js  control_bar.js  index.html  login.html  logout.html  main_content.js  modal.js  modals.js  particle-effects.js  promptParser.js  sidebar.js  style.css  taskEditor.js  taskManager.js  task_queue.js
tests/: test_auth.py  test_backend.py  test_browser.py  test_custom_tools.py  test_unit_backend.py
(+307 files in other folders)
